--- a/checkout.html
+++ b/checkout.html
@@ -98,20 +98,19 @@
 
         <div class="checkout-sp">
           <div class="sp-right-1">
-            <div class="sampham">
+            <div class="sanpham">
               <img src="images/img15.jpg">
-              <sp>Birthday Gifts</sp>
+              <div class="namesp">Birthday Gifts</div>
             </div>
-            <sp1>Subtotal</sp1>
-            <sp2>Shipping</sp2>
-            <sp3>Total</sp3>
+            <div class="ts1">Subtotal</div>
+            <div class="ts2">Shipping</div>
+            <div class="ts3">Total</div>
           </div>
           <div class="sp-left-1">
-            <le1></le1>
-            <le1></le1>
-            <le1></le1>
-            <le1></le1>
-            <le1></le1>
+            <div class="tas4">$8.50</div>
+            <div class="tas5">$8.50</div>
+            <div class="tas6">Enter shipping address</div>
+            <div class="tas7">USD $8.50</div>
           </div>
 
         </div>
