--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 
     <div class="box1">
       <div class="a1">
-        <div class="a1-box" onclick="window.location.href='sanpham.html';">
+        <div class="a1-box" onclick="window.location.href='detail.html';">
           <img src="images/img1.jpg">
           <div class="a-content">
             <a1>
@@ -1038,7 +1038,7 @@
     <div class="line-search"></div>
 
 
-    <div class="suggest" onclick="window.location.href='sanpham.html';">
+    <div class="suggest" onclick="window.location.href='detail.html';">
         <div class="suggest-img">
           <img src="images/img1.jpg">
         </div>
@@ -1066,7 +1066,7 @@
       <div class="total">Total:</div>
       <div class="cart-price">$54.00</div>
     </div>
-    <div class="checkout">CHECKOUT</div>
+    <div class="checkout" onclick="window.location.href='checkout.html';">CHECKOUT</div>
   </div>
 </div>
 
